--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,73 @@
   pointer-events: none;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(12, 236, 206);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.todo {
+  display: flex;
+  flex-direction: column;
+  margin: 100px auto;
+  max-width: 350px;
+  min-height: 400px;
+  padding: 20px;
+  background-color: #fff;
+  color: rgb(40, 136, 123);
+}
+
+.todo-item {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.ml-1 {
+  margin-left: 10px;
+}
+
+form {
+  display: flex;
+  width: 100%;
+  margin: 20px auto;
+  justify-content: space-between;
+}
+
+form input {
+  width: 85%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  outline: none;
+}
+
+::placeholder {
+  font-size: 15px;
+  letter-spacing: 3px;
+  color: #888;
+}
+
+form button {
+  background-color: transparent;
+  border: 1px solid #999;
+  width: 13%;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 7px;
+}
+
+button:hover {
+  background-color: #000;
+  border-color: #000;
+  color: #fff;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
